# state_sync

./: .gitignore  LICENSE  Makefile  README.md  config-example.yml  pyproject.toml  start.py
.github/workflows/: ci.yml
app/: start.py  state_sync_controller.py
app/models/: state_sync_model.py
app/view/: console_log.py
src/: state_sync_controller.py
src/helpers/: console_log_formatter.py  printer.py  validator.py
src/models/: parser_model.py  state_sync_model.py
src/view/: console_log.py
state-sync/: logs.py  models.py  tools.py
state_sync/: __main__.py  controllers.py  dispatcher.py  helpers.py  main.py  models.py  services.py  tools.py
state_sync/tests/: test_command_runner.py
tests/: test_state_sync_model.py  test_validator.py
